--- a/JenkinsFile
+++ b/JenkinsFile
@@ -69,7 +69,7 @@ def logoutFromSalesforce(sfdxHome){
 	println "Successfully logout from Salesforce"
 }
 
-def updateFiles (sfdxHome) {
+def updateFiles (sfdxHome, config) {
     	def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f import/Account.csv -i Id -u ${config.credentials[org].username}"
 		
 		println con
