--- a/JenkinsFile
+++ b/JenkinsFile
@@ -23,7 +23,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 	stage('Update file'){
         logoutFromSalesforce(sfdxHome)
         authenticateToSalesforce(sfdxHome, config, devHubName)
-        updateFiles(sfdxHome, config, org)
+        updateFiles(sfdxHome, config, devHubName)
     }
 	 stage('Logout'){
 	 	logoutFromSalesforce(sfdxHome)
