--- a/JenkinsFile
+++ b/JenkinsFile
@@ -28,7 +28,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 	stage('Update file'){
         logoutFromSalesforce(sfdxHome)
         authenticateToSalesforce(sfdxHome, config, devHubName)
-        updateFiles(sfdxHome, config, devHubName)
+        updateFiles(sfdxHome, config, devHubName, objectType)
     }
 	 stage('Logout'){
 	 	logoutFromSalesforce(sfdxHome)
