--- a/JenkinsFile
+++ b/JenkinsFile
@@ -75,8 +75,8 @@ def logoutFromSalesforce(sfdxHome){
 }
 
 def validateFile (objectType){
-    println "/import/${objectType}.csv"
-    if (!fileExists("/import/${objectType}.csv")){
+    println "import/${objectType}.csv"
+    if (!fileExists("import/${objectType}.csv")){
         error ("There is no file to update records or the file name has a different name than the object You want to update")
     }
 }
