--- a/JenkinsFile
+++ b/JenkinsFile
@@ -76,7 +76,7 @@ def logoutFromSalesforce(sfdxHome){
 
 def validateFile (objectType){
     if (!fileExists("import/${objectType}.csv")){
-        error ("There is no file to update records or the file name has a different name than the object You want to update")
+        error ("There is no file to update records or the file has a different name than the object You want to update")
     } else {
         println ("File was found. Proceeding ... ")
     }
