--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
     }
 
     stage ('Validate file to upload'){
-        validateFile(objectType)
+        validateFile(devHubName, objectType)
     }
 
     stage('Authentication to Salesforce') {
@@ -74,7 +74,11 @@ def logoutFromSalesforce(sfdxHome){
 	println "Successfully logout from Salesforce"
 }
 
-def validateFile (objectType){
+def validateFile (org, objectType){
+    def finder = new FileNameFinder()
+    def files = finder.getFileNames 'import', '**/*.csv'
+    print files
+
     if (!fileExists("import/${objectType}.csv")){
         error ("There is no file to update records or the file has a different name than the object You want to update")
     } else {
