--- a/JenkinsFile
+++ b/JenkinsFile
@@ -75,9 +75,7 @@ def logoutFromSalesforce(sfdxHome){
 }
 
 def validateFile (org, objectType){
-    def finder = new FileNameFinder()
-    def files = finder.getFileNames 'import', '**/*.csv'
-    print files
+    print dir
 
     if (!fileExists("import/${objectType}.csv")){
         error ("There is no file to update records or the file has a different name than the object You want to update")
