--- a/JenkinsFile
+++ b/JenkinsFile
@@ -75,13 +75,16 @@ def logoutFromSalesforce(sfdxHome){
 }
 
 def validateFile (org, objectType){
-    print dir
+    def list = []
 
-    if (!fileExists("import/${objectType}.csv")){
-        error ("There is no file to update records or the file has a different name than the object You want to update")
-    } else {
-        println ("File was found. Proceeding ... ")
+    def dir = new File("import")
+    
+    dir.eachFileRecurse (FileType.FILES) { file ->
+    list << file
     }
+
+    println list.toString()
+
 }
 
 def updateFiles (sfdxHome, config, org, objectType) {
