--- a/JenkinsFile
+++ b/JenkinsFile
@@ -81,9 +81,10 @@ def validateFile (org, objectType){
 
 dir('import') {
     def files = findFiles glob: '**/*.csv'
-    def listOfFiles[]
+    def listOfFiles = [] as String[]
     for (f in files){
         if (f.toString().contains(org) && f.toString().contains(objectType)){
+            f = f.toString()
             listOfFiles.add(f)
         }
         }
