--- a/JenkinsFile
+++ b/JenkinsFile
@@ -83,10 +83,10 @@ def validateFile (org, objectType, importDir){
     dir(importDir) {
     def files = findFiles glob: '**/*.csv'
     def listOfFiles = []
+    if (files.size()>0){
     for (f in files){
         def nameSplited = f.toString().split('_').collect{it as String}
-        println nameSplited[0] + " " + nameSplited[1]
-               
+        
         if (nameSplited[0].toLowerCase().equals(org.toLowerCase()) && nameSplited[1].toLowerCase().contains(objectType.toLowerCase())){
             listOfFiles.add(f.toString())
         }
@@ -97,7 +97,11 @@ def validateFile (org, objectType, importDir){
     } else if (listOfFiles.size()>1){
          error ("There are too many files with the specified Envrionment and Object Type names.\nList of files that were found:\n" + listOfFiles.toString())
     } else {
-        error ("There is no file with the specified Environment and Object Type names or there is no .csv file.")
+        error ("There is no file with the specified Environment and Object Type names.")
+    }
+    }
+    else {
+        error ("There is no .csv file.")
     }
     }
 }
