--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
     }
 
     stage ('Validate file to upload'){
-        checkoutSourceRepository(importDir)
+        checkoutSourceRepository()
         fileToUpload = validateFile(devHubName, objectType, importDir)
     }
 
@@ -39,12 +39,12 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 }
 }
 
-def checkoutSourceRepository(importDir){
+def checkoutSourceRepository(){
    
 checkout([  
             $class:   'GitSCM', 
             branches:   [[name: '*/main']], 
-            extensions: [['CleanBeforeCheckout']], 
+            extensions: [], 
             userRemoteConfigs: [[url: 'https://github.com/fttra/devOpsSFDX.git']]
             ])
 }
