--- a/JenkinsFile
+++ b/JenkinsFile
@@ -113,5 +113,5 @@ def validateFile (org, objectType, importDir){
 
 def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
-    	def con = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id"
+    	def con = script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id"
 }
