--- a/JenkinsFile
+++ b/JenkinsFile
@@ -114,5 +114,5 @@ def validateFile (org, objectType, importDir){
 def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
     	def con = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id"
-        println con.toString()
+        def status = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:status -i 7507Q000000M6d4QAC -b 7517Q000000LcrVQAS"
 }
