--- a/JenkinsFile
+++ b/JenkinsFile
@@ -116,12 +116,12 @@ def updateFiles (sfdxHome, objectType, fileToUpload) {
 
         def status
 
-    	def con = bat returnStdout: dupa, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id > status"
+    	def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id > status"
 
         println status
         println status
         println status
         println status
-        
+
         
 }
