--- a/JenkinsFile
+++ b/JenkinsFile
@@ -118,6 +118,7 @@ def updateFiles (sfdxHome, objectType, fileToUpload) {
 
     	def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id > ${status}"
 
+        echo con
         println status
         println status
         println status
