--- a/JenkinsFile
+++ b/JenkinsFile
@@ -114,11 +114,9 @@ def validateFile (org, objectType, importDir){
 def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
 
-    	def con = bat (returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id")
-        println con
-        println con
-        println con
-        println con
-
-        
+    	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStatus: true)
+        if (updateStatus!=0){
+        jsonUp = readJSON file: 'update.json'
+        println jsonUp.toString()
+    }
 }
