--- a/JenkinsFile
+++ b/JenkinsFile
@@ -115,8 +115,9 @@ def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
 
     	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStatus: true)
-        if (updateStatus!=0){
+        if (updateStatus==0){
         jsonUp = readJSON file: 'update.json'
         println jsonUp.toString()
+        println updateStatus
     }
 }
