--- a/JenkinsFile
+++ b/JenkinsFile
@@ -117,11 +117,12 @@ def updateFiles (sfdxHome, objectType, fileToUpload) {
     	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStatus: true)
         if (updateStatus==0){
         jsonUp = readJSON file: 'update.json'
-        println jsonUp.toString()
+        
+        println jsonUp
         
 
-        def jobId = jsonUp.result[jobId]
-        println jobId
+        def ajobId = jsonUp.result.jobId
+        println ajobId
 
 
 
