--- a/JenkinsFile
+++ b/JenkinsFile
@@ -115,7 +115,7 @@ def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
 
     	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStatus: true)
-        println updateStatus;
+        println updateStatus
         if (updateStatus==0){
         jsonUp = readJSON file: 'update.json' 
         def usJobId = jsonUp.result.id
