--- a/JenkinsFile
+++ b/JenkinsFile
@@ -114,12 +114,18 @@ def validateFile (org, objectType, importDir){
 def updateFiles (sfdxHome, objectType, fileToUpload) {
         println ("Preparing to upload file: ${fileToUpload}")
 
-    	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStdout: true)
+    	def updateStatus = bat (script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s ${objectType} -f import/${fileToUpload} -i Id --json > update.json", returnStatus: true)
         println updateStatus
-     //   if (updateStatus==0){
+        if (updateStatus==0){
         jsonUp = readJSON file: 'update.json' 
-        def usJobId = jsonUp.result.id
-        def usBatchId = jsonUp.result.jobId
-        println "-i: " + usJobId + " -b: " + usBatchId
-   // }
+        
+     //   def usJobId = jsonUp.result.jobId
+      //  def usBatchId = jsonUp.result.id
+        
+        def status = bat (returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:status -i jsonUp.result.jobId -b jsonUp.result.id")
+        println status
+
+        } else {
+            error (jsonUp.message)
+        }
 }
