--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,7 @@ node {
     def objectType = "${params.Object}"
     def importDir = 'import'
     def fileToUpload
+    def objPossibleToUp = ["Account", "User"] as String[]
 
     //credential folder
     def resource = libraryResource resource: 'readFile-config.yml'
@@ -21,7 +22,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 
     stage ('Validate file to upload'){
         checkoutSourceRepository()
-        fileToUpload = validateFile(devHubName, objectType, importDir)
+        fileToUpload = validateFile(devHubName, objPossibleToUp, objectType, importDir)
     }
 
     stage('Authentication to Salesforce') {
@@ -84,31 +85,47 @@ def logoutFromSalesforce(sfdxHome){
 	println "Successfully logout from Salesforce"
 }
 
-def validateFile (org, objectType, importDir){
+def validateFile (org, objPossibleToUp, objectType, importDir){
     dir(importDir) {
     def files = findFiles glob: '**/*.csv'
     def listOfFiles = []
-    if (files.size()>0){
-    for (f in files){
-        def nameSplited = f.toString().split('_', 2).collect{it as String}
-        
-        if (nameSplited[0].toLowerCase().equals(org.toLowerCase()) && nameSplited[1].toLowerCase().contains(objectType.toLowerCase())){
-            listOfFiles.add(f.toString())
+    def filesToUpload = [:]
+
+    if (objectType.toString()='ALL'){    
+        for (f in files){
+            def nameSplited = f.toString().split('_', 2).collect{it as String}
+            for (obj in objPossibleToUp){
+                if (nameSplited[1].toLowerCase().contains(obj.toLowerCase())){
+                    if(fileToUpload.size()>0 && fileToUpload.containsKey(f){
+                        error ("File: " + f + " is not valid as there are two object names in the name of the file")
+                    } else {
+                    filesToUpload.put(f,obj)
+                    }
+                }
+            }
         }
-        }
-    if (listOfFiles.size()==1){
-       println "Found a file to upload. File name:\n" + listOfFiles.toString() + "\nProceeding ..."
-       return listOfFiles[0]
-    } else if (listOfFiles.size()>1){
-         error ("There are too many files with the specified Envrionment and Object Type names.\nList of files that were found:\n" + listOfFiles.toString())
+        println filesToUpload.toString()
     } else {
-        error ("There is no file with the specified Environment and/or Object Type names.\nList of the files in the target directory:\n" + listOfFiles.toString())
-    }
-    }
-    else {
+    if (files.size()>0){
+        for (f in files){
+            def nameSplited = f.toString().split('_', 2).collect{it as String}
+            if (nameSplited[0].toLowerCase().equals(org.toLowerCase()) && nameSplited[1].toLowerCase().contains(objectType.toLowerCase())){
+                listOfFiles.add(f.toString())
+            }
+        }
+        if (listOfFiles.size()==1){
+            println "Found a file to upload. File name:\n" + listOfFiles.toString() + "\nProceeding ..."
+            return listOfFiles[0]
+        } else if (listOfFiles.size()>1){
+            error ("There are too many files with the specified Envrionment and Object Type names.\nList of files that were found:\n" + listOfFiles.toString())
+        } else {
+            error ("There is no file with the specified Environment and/or Object Type names.\nList of the files in the target directory:\n" + listOfFiles.toString())
+        }
+    } else {
         error ("There is no .csv file in the target directory")
     }
     }
+}
 }
 
 def updateFiles (sfdxHome, objectType, fileToUpload) {
