--- a/JenkinsFile
+++ b/JenkinsFile
@@ -96,7 +96,7 @@ def validateFile (org, objPossibleToUp, objectType, importDir){
             def nameSplited = f.toString().split('_', 2).collect{it as String}
             for (obj in objPossibleToUp){
                 if (nameSplited[1].toLowerCase().contains(obj.toLowerCase())){
-                    if(fileToUpload.size()>0 && fileToUpload.containsKey(f){
+                    if(filesToUpload.size()>0 && filesToUpload.containsKey(f){
                         error ("File: " + f + " is not valid as there are two object names in the name of the file")
                     } else {
                     filesToUpload.put(f,obj)
